--- a/tex/electronicsPreface.tex
+++ b/tex/electronicsPreface.tex
@@ -1,57 +1,42 @@
 \thispagestyle{empty}
 \باب{دیباچہ}
-برقی آلات اور عددی ادوار کے بعد مماثل برقیات میری تیسری کتاب ہے۔یہ کتاب بھی اس امید کے ساتھ لکھی گئی ہے کہ یہ ایک دن برقی انجنیئرنگ کی نصابی کتاب کے طور پر پڑھائی جائے گی۔امید کی جاتی ہے کہ اب بھی طلبہ و طالبات اس سے استفادہ  کر سکیں گے۔
+برقی آلات اور عددی ادوار کے بعد \قول{ مماثل برقیات } میری تیسری کتاب ہے۔یہ کتاب  برقی انجنیئری کی نصابی کتاب  ہے۔امید کی جاتی ہے کہ عملی میدان میں  بھی یہ مددگار ثابت ہو گی۔
 
-اس کتاب میں تقریباً \عددی{503} اشکال اور \عددی{174} حل شدہ مثال دئے گئے ہیں۔اس کے علاوہ  مشق کے لئے  \عددی{175} سوالات  بمع جوابات بھی دیے گئے ہیں۔
+کتاب میں تقریباً \عددی{503} اشکال اور \عددی{174} حل شدہ مثال دیے  گئے ہیں۔اس کے علاوہ  مشق کے لئے  \عددی{175} سوالات  بمع جوابات بھی دیے گئے ہیں۔
 
-یہ کتاب \تحریر{Ubuntu} استعمال  کرتے ہوئے \تحریر{XeLatex} میں تشکیل دی گئی۔یہ کتاب خطِ جمیل نوری نستعلیق میں لکھی گئی ہے۔پرزہ جات کے خط \تحریر{Octave} جبکہ ادوار کو \تحریر{gEDA} کی مدد سے بنایا گیا ہے۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان سافٹ ویر لکھنے والوں کا دل سے شکر گزار ہوں۔میں طلبہ و طالبات سے گزارش  کرتا ہوں کہ وہ آگے بڑھیں اور اس قسم کے سافٹ ویر لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
+کتاب \تحریر{Ubuntu} استعمال  کر کے  \تحریر{XeLatex} میں تشکیل دی گئی  اور اس میں   \قول{جمیل نوری نستعلیق } طرز    لکھائی  استعمال کی گئی۔برقیاتی ترسیمات  \تحریر{Octave} جبکہ ادوار \تحریر{gEDA} میں بنائے گئے  ۔ کئی ادوار پر \تحریر{GnuCap} کی مدد سے غور کیا گیا۔میں ان نرم افزار لکھنے والوں کا دل سے شکر گزار ہوں۔طلبہ و طالبات سے گزارش   کی جاتی ہے  کہ وہ اس قسم کے نرم افزار لکھیں یا ان کا ترجمہ علاقائی زبانوں میں کریں۔
 
-اس کتاب کی تشکیل میں ہر موڑ پر کئی کتابوں کا سہارا لیا گیا۔ ان میں مندرجہ ذیل کا ذکر ضروری ہے۔
+کتاب کی تشکیل میں کئی کتابوں کا سہارا لیا گیا۔ ان میں مندرجہ ذیل کا ذکر ضروری ہے۔
+
 {
 \begin{otherlanguage}{english}
-\begin{itemize}
-\item
-Electronic Circuits by Schilling-Belove
-\item
-Integrated Electronics by Millman-Halkias
-\item
+Electronic Circuits by Schilling-Belove\\
+Integrated Electronics by Millman-Halkias\\
 Microelectronic Circuits by Sedra-Smith
-\end{itemize}
 \end{otherlanguage}
 }
 
-جبکہ اردو اصطلاحات چننے میں درج ذیل لغت سے استفادہ  کیا گیا۔
+اردو اصطلاحات چننے میں درج ذیل لغت سے استفادہ  کیا گیا۔ 
+
 {
 \begin{otherlanguage}{english}
-\begin{itemize}
-\item
-http:/\!\!/www.urduenglishdictionary.org
-\item
-http:/\!\!/www.nlpd.gov.pk/lughat/
-\end{itemize}
+http:/\!\!/www.urduenglishdictionary.org\\
+http:/\!\!/www.nlpd.gov.pk/lughat
 \end{otherlanguage}
 }
 
+میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کو مکمل کرنے میں میری مدد کی؛ بالخصوص کامسیٹس میں میرے ساتھی ڈاکٹر عابد حسن مجتبٰے جنہوں نے کتاب کی شکل نکھاری اور میرے شاگرد سید زین عباس، حافظہ مریم اسلم، حرا خان اور  سجّیہ شوکت  جنہوں نے  کتاب کی درستگی کی۔ 
 
-میں یہاں ان تمام خواتین و حضرات کا شکریہ ادا کرنا چاہتا ہوں جنہوں نے اس کتاب کو مکمل کرنے میں میری مدد کی، بالخصوص کامسیٹس میں میرے ساتھی ڈاکٹر عابد حسن مجتبٰے جنہوں نے کتاب کی شکل نکھاری اور میرے شاگرد سید زین عباس، حافظہ مریم اسلم، حرا خان اور  سجّیہ شوکت  جنہوں نے اس کتاب کی درستگی میں مدد کی۔ 
+ کتاب کو پہلی مرتبہ بطور نصابی کتاب جن طلباء و طالبات نے پڑھا ان کے نام طلحا ذاہد، عبد اللّہ رضا، عائشہ رباب، سمیا الرحمان، صبح صادق، فیصل پرویز، جبران شبیر اور شاہ زیب علی ہیں۔انہوں نے کتاب کو درست کرنے میں میری مدد کی جس کا میں شکر گزار ہوں۔
 
-اس کتاب کو پہلی مرتبہ بطور نصابی کتاب جن طلباء و طالبات نے پڑھا ان کے نام طلحا ذاہد، عبد اللّہ رضا، عائشہ رباب، سمیا الرحمان، صبح صادق، فیصل پرویز، جبران شبیر اور شاہ زیب علی ہیں۔انہوں نے کتاب کو درست کرنے میں میری مدد کی جس کا میں شکر گزار ہوں۔
-
-آپ سے گزارش ہے کہ اس کتاب کو زیادہ سے زیادہ طلبہ و طالبات تک پہنچائیں اور کتاب میں غلطیوں کی نشاندہی میرے  برقیاتی پتہ
-{
-\begin{otherlanguage}{english}
-khalidyousafzai@comsats.edu.pk
-\end{otherlanguage}
-}
- پر کریں۔میری تمام کتابوں کی مکمل \تحریر{XeLatex} معلومات
-
+ گزارش  کی جاتی ہے کہ   کتاب کو زیادہ سے زیادہ طلبہ و طالبات تک پہنچائیں اور کتاب میں غلطیوں کی نشاندہی میرے  برقیاتی پتہ      پر کریں۔میری  کتابوں کی مکمل \تحریر{XeLatex} معلومات
+ 
 {
 \begin{otherlanguage}{english}
 https:/\!\!/www.github.com/khalidyousafzai
 \end{otherlanguage}
 }
-
-سے حاصل کی جا سکتی ہیں جنہیں آپ مکمل اختیار کے ساتھ استعمال کر سکتے ہیں۔
+سے حاصل کی جا سکتی ہے ، جنہیں آپ مکمل اختیار کے ساتھ استعمال کر سکتے ہیں۔
 
 \vspace{5mm}
 
