--- a/tex/electronicsSymbols.tex
+++ b/tex/electronicsSymbols.tex
@@ -44,7 +44,7 @@
 \FloatBarrier
 
 
-
+\begin{center}
 \begin{tabular}{r l}
 \hline
 \multicolumn{2}{c}{اصطلاحات} \\
@@ -69,3 +69,4 @@
 ماسفیٹ & \تحریر{mosfet}\\
 حیطہ سوار اشارہ & \تحریر{AM signal}
 \end{tabular}
+\end{center}
