--- a/tex/myUrduCommands.tex
+++ b/tex/myUrduCommands.tex
@@ -81,6 +81,10 @@
 }
 \newcommand{\زور}[1]{\aemph{#1}} %overline urdu text to emphasize
 
+\newcommand{\kQuote}[1]{“\ignorespaces#1\ignorespaces”}
+\newcommand{\kquote}[1]{‘\ignorespaces#1\ignorespaces’}
+\newcommand{\قولء}[1]{’\ignorespaces#1\ignorespaces‘}
+\newcommand{\قول}[1]{”\ignorespaces#1\ignorespaces“}
 
 \renewcommand{\indexname}{فرہنگ}        %does nothing here. must be placed within begin{urdufont} environment to be the last to take effect 
 %===============================
