--- a/tex/myUrduCommandsElectronics.tex
+++ b/tex/myUrduCommandsElectronics.tex
@@ -66,25 +66,28 @@
 \newcommand*{\زیرنوشت}[3]{\: \ensuremath{{#1_{#2 \textrm {#3}}}} \:}   %english+urdu subscript \زیرنوشت{V}{CE}{غیرافزائندہ}
 \newcommand*{\سیدھازیرنوشت}[2]{\: \ensuremath{{#1_{\textup{#2}}}} \:} %RC
 
-\newcommand{\سن}[1]{؁\,\ensuremath{#1}}
+%\newcommand{\سن}[1]{؁\,\ensuremath{#1}}
+\newcommand{\سن}[1]{
+#1 ؁
+}
 \newcommand*{\قریب}[1]{\mbox{#1}}
 
-\newcommand{\kQuote}[1]{“#1”}
-\newcommand{\kquote}[1]{‘#1’}
-\newcommand{\قولء}[1]{’#1‘}
-\newcommand{\قول}[1]{”#1“}
+\newcommand{\kQuote}[1]{“\ignorespaces#1\ignorespaces”}
+\newcommand{\kquote}[1]{‘\ignorespaces#1\ignorespaces’}
+\newcommand{\قولء}[1]{’\ignorespaces#1\ignorespaces‘}
+\newcommand{\قول}[1]{”\ignorespaces#1\ignorespaces“}
 
 \renewcommand{\indexname}{فرہنگ}        %apparently did nothing
 %===============================
 
 
 %%numbering scheme
-%\renewcommand*{\thefigure}{\thechapter.\arabic{figure}}
-%\renewcommand*{\thetable}{\thechapter.\arabic{table}}
-%\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
-%\renewcommand*{\thesection}{\thechapter.\arabic{section}}
-%\renewcommand*{\thesubsection}{\thechapter.\arabic{section}.\arabic{subsection}}
-%\renewcommand*{\thesubsubsection}{\thechapter.\arabic{section}.\arabic{subsection}.\arabic{subsubsection}}
+\renewcommand*{\thefigure}{\thechapter.\arabic{figure}}
+\renewcommand*{\thetable}{\thechapter.\arabic{table}}
+\renewcommand*{\theequation}{\thechapter.\arabic{equation}}
+\renewcommand*{\thesection}{\thechapter.\arabic{section}}
+\renewcommand*{\thesubsection}{\thechapter.\arabic{section}.\arabic{subsection}}
+\renewcommand*{\thesubsubsection}{\thechapter.\arabic{section}.\arabic{subsection}.\arabic{subsubsection}}
 
 %================
 %my environments
